--- a/pages/code/asdocs/all-index-G.html
+++ b/pages/code/asdocs/all-index-G.html
@@ -324,11 +324,11 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("GÂ
      Get the user-specific game data for the specified occupant.</td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/BaseDataPack.html#getData()">getData</a>(name) &mdash; Method in class com.whirled.<a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/BaseDataPack.html">BaseDataPack</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/BaseDataPack.html#getData()">getData</a>(name, formatType) &mdash; Method in class com.whirled.<a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/BaseDataPack.html">BaseDataPack</a></td>
 </tr>
 <tr>
 <td width="20"></td><td>
-     Get some data.</td>
+     Get some data, optionally formatted as a different type than that specified in the data xml.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/DateUtil.html#getDayName()">getDayName</a>(day, full) &mdash; Static method in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/DateUtil.html">DateUtil</a></td>
@@ -494,6 +494,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("GÂ
 <tr>
 <td width="20"></td><td>
      Get the id of the viewer that is viewing this instance.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/BaseDataPack.html#getInt()">getInt</a>(name) &mdash; Method in class com.whirled.<a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/BaseDataPack.html">BaseDataPack</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Convenience function to access some data as an int.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/LineSegment.html#getIntersection()">getIntersection</a>(line:<a href="com/threerings/util/LineSegment.html" onclick="javascript:loadClassListFrame('com/threerings/util./class-list.html');">com.threerings.util:LineSegment</a>, returnPoint) &mdash; Method in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/LineSegment.html">LineSegment</a></td>
@@ -846,6 +853,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("GÂ
 <tr>
 <td width="20"></td><td>
      Return the ids of all parties presently in this game.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/LocalSubControl.html#getPartyInfo()">getPartyInfo</a>() &mdash; Method in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/LocalSubControl.html">LocalSubControl</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     TEMPORARY.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/Vector2.html#getPerp()">getPerp</a>(ccw) &mdash; Method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/Vector2.html">Vector2</a></td>
