--- a/pages/code/asdocs/all-index-P.html
+++ b/pages/code/asdocs/all-index-P.html
@@ -134,6 +134,19 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/LocalSubControl.html#event:partyChanged">partyChanged</a> &mdash; Event in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/LocalSubControl.html">LocalSubControl</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+ TEMPORARY.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/LocalSubControl.html#partyChanged_temp()">partyChanged_temp</a>() &mdash; Method in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/LocalSubControl.html">LocalSubControl</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/PartySubControl.html">PartySubControl</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/package-detail.html">com.whirled.avrg</a></td>
 </tr>
 <tr>
@@ -486,6 +499,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
 <td width="20"></td><td>
      Sets the top-left pixel of a DisplayObject to the given location, taking the
      object's bounds into account.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/DisplayUtil.html#positionBoundsRelative()">positionBoundsRelative</a>(disp, relativeTo, x, y) &mdash; Static method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/DisplayUtil.html">DisplayUtil</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Sets the top-left pixel of a DisplayObject to the given location, relative to another
+     DisplayObject's coordinate space.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/media/class-list.html');" href="com/threerings/flash/media/FlvVideoPlayer.html#_positionChecker">_positionChecker</a> &mdash; Property in class com.threerings.flash.media.<a onclick="javascript:loadClassListFrame('com/threerings/flash/media/class-list.html');" href="com/threerings/flash/media/FlvVideoPlayer.html">FlvVideoPlayer</a></td>
