--- a/pages/code/asdocs/all-index-S.html
+++ b/pages/code/asdocs/all-index-S.html
@@ -367,6 +367,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
      Store persistent data that can later be retrieved by an instance of this game.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/CameraSnapshotter.html#setCorrection()">setCorrection</a>() &mdash; Method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/CameraSnapshotter.html">CameraSnapshotter</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     There appears to be a bug with the camera that "locks" it to the size it was at when
+     it was unmuted.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/MobSubControlClient.html#setDecoration()">setDecoration</a>(decoration) &mdash; Method in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/MobSubControlClient.html">MobSubControlClient</a></td>
 </tr>
 <tr>
