--- a/pages/code/asdocs/com/whirled/DataPack.html
+++ b/pages/code/asdocs/com/whirled/DataPack.html
@@ -106,9 +106,9 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="hideInheritedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="BaseDataPack.html#getData()">getData</a>(name:String):*</div>
+<a class="signatureLink" href="BaseDataPack.html#getData()">getData</a>(name:String, formatType:String = null):*</div>
 <div class="summaryTableDescription">
-     Get some data.</div>
+     Get some data, optionally formatted as a different type than that specified in the data xml.</div>
 </td><td class="summaryTableOwnerCol"><a href="BaseDataPack.html">BaseDataPack</a></td>
 </tr>
 <tr class="">
@@ -141,6 +141,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <a class="signatureLink" href="BaseDataPack.html#getFileAsXML()">getFileAsXML</a>(name:String):XML</div>
 <div class="summaryTableDescription">
      Get a File, as an XML object.</div>
+</td><td class="summaryTableOwnerCol"><a href="BaseDataPack.html">BaseDataPack</a></td>
+</tr>
+<tr class="hideInheritedMethod">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="BaseDataPack.html#getInt()">getInt</a>(name:String):int</div>
+<div class="summaryTableDescription">
+     Convenience function to access some data as an int.</div>
 </td><td class="summaryTableOwnerCol"><a href="BaseDataPack.html">BaseDataPack</a></td>
 </tr>
 <tr class="">
