--- a/pages/code/asdocs/com/whirled/avrg/LocalSubControl.html
+++ b/pages/code/asdocs/com/whirled/avrg/LocalSubControl.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="LocalSubControl,com.whirled.avrg.LocalSubControl,hitPointTester,mobSpriteExporter,feedback,getPaintableArea,locationToPaintable,locationToRoom,paintableToRoom,roomToPaintable,setHitPointTester,setMobSpriteExporter" name="keywords">
+<meta content="LocalSubControl,com.whirled.avrg.LocalSubControl,hitPointTester,mobSpriteExporter,feedback,getPaintableArea,getPartyInfo,locationToPaintable,locationToRoom,paintableToRoom,partyChanged_temp,roomToLocationAtDepth,roomToLocationAtHeight,roomToPaintable,setHitPointTester,setMobSpriteExporter" name="keywords">
 <title>com.whirled.avrg.LocalSubControl</title>
 </head>
 <body>
@@ -116,6 +116,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
      Returns the bounds of the area on which the AVRG will be drawn.</div>
 </td><td class="summaryTableOwnerCol">LocalSubControl</td>
 </tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#getPartyInfo()">getPartyInfo</a>():Object</div>
+<div class="summaryTableDescription">
+     TEMPORARY.</div>
+</td><td class="summaryTableOwnerCol">LocalSubControl</td>
+</tr>
 <tr class="hideInheritedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
@@ -159,6 +167,24 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#roomToLocationAtDepth()">roomToLocationAtDepth</a>(p:Point, depth:Number):Array</div>
+<div class="summaryTableDescription">
+     Finds the projection of mouse coordinates onto a plane in the room, parallel with the
+     front wall, intersecting the room at specified depth.</div>
+</td><td class="summaryTableOwnerCol">LocalSubControl</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#roomToLocationAtHeight()">roomToLocationAtHeight</a>(p:Point, height:Number):Array</div>
+<div class="summaryTableDescription">
+     Finds the projection of mouse coordinates onto a plane in the room, parallel with the
+     floor, intersecting the room at specified height.</div>
+</td><td class="summaryTableOwnerCol">LocalSubControl</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#roomToPaintable()">roomToPaintable</a>(p:Point):Point</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">LocalSubControl</td>
@@ -183,6 +209,22 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </tr>
 </table>
 </div>
+<a name="protectedMethodSummary"></a>
+<div class="summarySection">
+<div class="summaryTableTitle">Protected Methods</div>
+<table id="summaryTableProtectedMethod" class="summaryTable " cellpadding="3" cellspacing="0">
+<tr>
+<th>&nbsp;</th><th colspan="2">Method</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#partyChanged_temp()">partyChanged_temp</a>():void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">LocalSubControl</td>
+</tr>
+</table>
+</div>
 <a name="eventSummary"></a>
 <div class="summarySection">
 <div class="summaryTableTitle">Events</div>
@@ -197,6 +239,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <table id="summaryTableEvent" class="summaryTable " cellpadding="3" cellspacing="0">
 <tr>
 <th>&nbsp;</th><th colspan="2">Event</th><th>Summary</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#event:partyChanged">partyChanged</a>
+</div>
+</td><td class="summaryTableDescription summaryTableCol">
+ TEMPORARY.</td><td class="summaryTableOwnerCol">LocalSubControl</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
@@ -320,6 +370,32 @@ showHideInherited();
 <a href="../avrg/LocalSubControl.html#event:SizeChanged" target="">SizeChanged</a>
 </div>
 </div>
+<a name="getPartyInfo()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">getPartyInfo</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function getPartyInfo():Object</code><p>
+     TEMPORARY. This method will be removed soon, and <b>no backwards compatibility will be
+     provided</b>. Use at your own risk. Better yet, don't use it at all, unless you are
+     wearing Tim Conkling's underwear.
+          Get the party information of the local player, or null if they're not in a party.
+     {
+         id: <partyId> (int)
+         name: <partyName> (String)
+         leaderId: <playerId> (int)
+         players: <playerIds> (Array of ints)
+     }
+     </p><p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Object</code></td>
+</tr>
+</table>
+</div>
 <a name="locationToPaintable()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -407,6 +483,87 @@ showHideInherited();
 </tr>
 </table>
 </div>
+<a name="partyChanged_temp()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">partyChanged_temp</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function partyChanged_temp():void</code>
+</div>
+<a name="roomToLocationAtDepth()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">roomToLocationAtDepth</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function roomToLocationAtDepth(p:Point, depth:Number):Array</code><p>
+     Finds the projection of mouse coordinates onto a plane in the room, parallel with the
+     front wall, intersecting the room at specified depth. This type of functionality is useful
+     for converting mouse position into room position at some constant depth. The result is
+     not constrained to be inside the room unit box.
+            </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">p</span>:Point</code> &mdash;            location in room coordinate space
+       </td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">depth</span>:Number</code> &mdash;        Z position of the intersection wall, in room coordinate space.
+            </td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Array</code> &mdash; an array containing [ x, y, z ] (with z value equal to depth), or null
+       if no valid location was found.
+     </td>
+</tr>
+</table>
+</div>
+<a name="roomToLocationAtHeight()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">roomToLocationAtHeight</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function roomToLocationAtHeight(p:Point, height:Number):Array</code><p>
+     Finds the projection of mouse coordinates onto a plane in the room, parallel with the
+     floor, intersecting the room at specified height. This type of functionality is useful
+     for converting mouse position into room position at some constant height. The result is
+     not constrained to be inside the room unit box.
+            </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">p</span>:Point</code> &mdash;            location in room coordinate space
+       </td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">height</span>:Number</code> &mdash;       Y position of the intersection wall, in room coordinate space.
+          </td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Array</code> &mdash; an array containing [ x, y, z ] (with y value equal to height) or null if
+     no valid location was found.
+          </td>
+</tr>
+</table>
+</div>
 <a name="roomToPaintable()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -465,8 +622,7 @@ showHideInherited();
      Sets the function that will manufacture <code>DisplayObject</code> instances on the client
      when mobs are spawned by the server agent. The function must take the string type of the
      requested mob and return a <code>DisplayObject</code>:
-     
-     <div class='listing'><pre>
+          <div class='listing'><pre>
         function createMobSprite (type :String) :DisplayObject;
      </pre></div>
           </p><p>Once created, the mob will be drawn in the room until the server agent despawns it. Clients
@@ -492,10 +648,25 @@ showHideInherited();
 </div>
 </div>
 <div class="detailSectionHeader">Event detail</div>
+<a name="event:partyChanged"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">partyChanged</td><td class="detailHeaderType">event&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<span class="label">Event object type: </span><a href="../avrg/AVRGameControlEvent.html"><code>com.whirled.avrg.AVRGameControlEvent</code></a>
+<br>
+<p></p><p>
+ TEMPORARY. This event will be removed soon, and <b>no backwards compatibility will be
+ provided</b>. Use at your own risk. Better yet, don't use it at all, unless you are
+ wearing Tim Conkling's underwear.
+  Dispatched when any party information has changed.
+ </p></div>
 <a name="event:sizeChanged"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">sizeChanged</td><td class="detailHeaderType">event&nbsp;</td>
+<td class="detailHeaderName">sizeChanged</td><td class="detailHeaderType">event&nbsp;</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
