--- a/pages/code/contrib/asdocs/all-index-C.html
+++ b/pages/code/contrib/asdocs/all-index-C.html
@@ -100,6 +100,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("CÂ
      The button in the panel which will call the function.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CameraController.html"><i>CameraController</i></a> &mdash; Interface in package <a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/package-detail.html">com.whirled.contrib.platformer.display</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html#_cameraCtrl">_cameraCtrl</a> &mdash; Property in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html">BoardSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/ActorController.html#canAttack()">canAttack</a>() &mdash; Method in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/ActorController.html">ActorController</a></td>
 </tr>
 <tr>
@@ -1786,7 +1798,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("CÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/CookieManager.html#CookieManager()">CookieManager</a>(gameCtrl, properties) &mdash; Constructor in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/CookieManager.html">CookieManager</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/CookieManager.html#CookieManager()">CookieManager</a>(gameCtrl, properties, debugLogging) &mdash; Constructor in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/CookieManager.html">CookieManager</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
