--- a/pages/code/contrib/asdocs/all-index-I.html
+++ b/pages/code/contrib/asdocs/all-index-I.html
@@ -47,6 +47,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/EnableSpawnerEventAction.html#_id">_id</a> &mdash; Property in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/EnableSpawnerEventAction.html">EnableSpawnerEventAction</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/OpenGateEventAction.html#_id">_id</a> &mdash; Property in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/OpenGateEventAction.html">OpenGateEventAction</a></td>
 </tr>
 <tr>
@@ -766,6 +772,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/ColliderTask.html#isComplete()">isComplete</a>() &mdash; Method in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/ColliderTask.html">ColliderTask</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CameraController.html#isComplete()">isComplete</a>() &mdash; Method in interface com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CameraController.html">CameraController</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
