--- a/pages/code/contrib/asdocs/all-index-P.html
+++ b/pages/code/contrib/asdocs/all-index-P.html
@@ -389,7 +389,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html#PersistenceManager()">PersistenceManager</a>(gameCtrl, properties) &mdash; Constructor in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html">PersistenceManager</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html#PersistenceManager()">PersistenceManager</a>(gameCtrl, properties, debugLogging) &mdash; Constructor in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html">PersistenceManager</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
