--- a/pages/code/contrib/asdocs/all-index-S.html
+++ b/pages/code/contrib/asdocs/all-index-S.html
@@ -854,6 +854,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html#setCameraController()">setCameraController</a>(cc:<a href="com/whirled/contrib/platformer/display/CameraController.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display./class-list.html');">com.whirled.contrib.platformer.display:CameraController</a>) &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/BoardSprite.html">BoardSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/LastTrickSprite.html#setCards()">setCards</a>(cards) &mdash; Method in class com.whirled.contrib.card.graphics.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/LastTrickSprite.html">LastTrickSprite</a></td>
 </tr>
 <tr>
