--- a/pages/code/contrib/asdocs/all-index-T.html
+++ b/pages/code/contrib/asdocs/all-index-T.html
@@ -386,6 +386,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("TÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CameraController.html#tick()">tick</a>(delta) &mdash; Method in interface com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CameraController.html">CameraController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/DestructableGateController.html#tick()">tick</a>(delta) &mdash; Method in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/DestructableGateController.html">DestructableGateController</a></td>
 </tr>
 <tr>
@@ -909,6 +915,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("TÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/LineData.html#toString()">toString</a>() &mdash; Method in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/LineData.html">LineData</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/CookieProperty.html#toString()">toString</a>() &mdash; Method in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/CookieProperty.html">CookieProperty</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
