--- a/pages/code/contrib/asdocs/all-index-W.html
+++ b/pages/code/contrib/asdocs/all-index-W.html
@@ -161,6 +161,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("WÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html#whenLoaded()">whenLoaded</a>(callback) &mdash; Method in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html">PersistenceManager</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Call the given function when this manager is loaded.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/CardSprite.html#_width">_width</a> &mdash; Property in class com.whirled.contrib.card.graphics.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/CardSprite.html">CardSprite</a></td>
 </tr>
 <tr>
