--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/ShotSprite.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/ShotSprite.html
@@ -151,6 +151,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="hideInheritedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="DynamicSprite.html#forceBack()">forceBack</a>():Boolean</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol"><a href="DynamicSprite.html">DynamicSprite</a></td>
+</tr>
+<tr class="hideInheritedMethod">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="DynamicSprite.html#getDynamic()">getDynamic</a>():<a href="../piece/Dynamic.html">Dynamic</a>
 </div>
 <div class="summaryTableDescription"></div>
