--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/class-list.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/class-list.html
@@ -67,6 +67,9 @@
 <td><a href="DynamicController.html">DynamicController</a></td>
 </tr>
 <tr>
+<td><a href="EnableSpawnerEventAction.html">EnableSpawnerEventAction</a></td>
+</tr>
+<tr>
 <td><a href="EventAction.html">EventAction</a></td>
 </tr>
 <tr>
