--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/package-detail.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/package-detail.html
@@ -92,64 +92,67 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Pa
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="DynamicController.html">DynamicController</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 <tr class="prow0">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="EnableSpawnerEventAction.html">EnableSpawnerEventAction</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="EventAction.html">EventAction</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="EventTrigger.html">EventTrigger</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="GameController.html">GameController</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="GameEvent.html">GameEvent</a></td><td class="summaryTableLastCol">
  A game event that has a trigger and an action.</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="GateController.html">GateController</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="HoverCollisionHandler.html">HoverCollisionHandler</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="HoverController.html">HoverController</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="ImmediateEventTrigger.html">ImmediateEventTrigger</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="LaserShotController.html">LaserShotController</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="MultiEventAction.html">MultiEventAction</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="MultiEventTrigger.html">MultiEventTrigger</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="OpenGateEventAction.html">OpenGateEventAction</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="RectDynamicController.html">RectDynamicController</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="RemoveGatesEventAction.html">RemoveGatesEventAction</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="SetGateEventAction.html">SetGateEventAction</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="ShotCollisionHandler.html">ShotCollisionHandler</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="ShotController.html">ShotController</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="SpawnerController.html">SpawnerController</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="SpawnerDeathEventTrigger.html">SpawnerDeathEventTrigger</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="WalkableCollisionHandler.html">WalkableCollisionHandler</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 </table>
