--- a/pages/code/asdocs/com/threerings/flash/CameraSnapshotter.html
+++ b/pages/code/asdocs/com/threerings/flash/CameraSnapshotter.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="CameraSnapshotter,com.threerings.flash.CameraSnapshotter,_bitmap,_camera,_video,height,width,attachVideo,clearSnapshot,detachVideo,getCameraName,getSnapshot,hasCamera,setCamera,setCameraName,setMode,takeSnapshot" name="keywords">
+<meta content="CameraSnapshotter,com.threerings.flash.CameraSnapshotter,_bitmap,_camera,_correctionHeight,_correctionWidth,_video,height,width,attachVideo,clearSnapshot,detachVideo,getCameraName,getSnapshot,handleCameraStatus,hasCamera,setCamera,setCameraName,setCorrection,setMode,takeSnapshot" name="keywords">
 <title>com.threerings.flash.CameraSnapshotter</title>
 </head>
 <body>
@@ -76,6 +76,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_camera">_camera</a> : Camera<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">CameraSnapshotter</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_correctionHeight">_correctionHeight</a> : int<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">CameraSnapshotter</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_correctionWidth">_correctionWidth</a> : int<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">CameraSnapshotter</td>
 </tr>
 <tr class="">
@@ -181,6 +189,22 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">CameraSnapshotter</td>
 </tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#handleCameraStatus()">handleCameraStatus</a>(event:StatusEvent):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">CameraSnapshotter</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#setCorrection()">setCorrection</a>():void</div>
+<div class="summaryTableDescription">
+     There appears to be a bug with the camera that "locks" it to the size it was at when
+     it was unmuted.</div>
+</td><td class="summaryTableOwnerCol">CameraSnapshotter</td>
+</tr>
 </table>
 </div>
 <script type="text/javascript" language="javascript">
@@ -207,6 +231,24 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>protected var _camera:Camera</code>
+</div>
+<a name="_correctionHeight"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_correctionHeight</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _correctionHeight:int</code>
+</div>
+<a name="_correctionWidth"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_correctionWidth</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _correctionWidth:int</code>
 </div>
 <a name="height"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -323,6 +365,20 @@ showHideInherited();
 </tr>
 </table>
 </div>
+<a name="handleCameraStatus()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">handleCameraStatus</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function handleCameraStatus(event:StatusEvent):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">event</span>:StatusEvent</code></td>
+</tr>
+</table>
+</div>
 <a name="hasCamera()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -371,6 +427,17 @@ showHideInherited();
 </tr>
 </table>
 </div>
+<a name="setCorrection()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">setCorrection</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function setCorrection():void</code><p>
+     There appears to be a bug with the camera that "locks" it to the size it was at when
+     it was unmuted.
+     </p></div>
 <a name="setMode()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
