--- a/pages/code/contrib/asdocs/all-classes.html
+++ b/pages/code/contrib/asdocs/all-classes.html
@@ -136,6 +136,9 @@
 <td><a href="com/whirled/contrib/avrg/probe/CallbackParameter.html">CallbackParameter</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/platformer/display/CameraController.html"><i>CameraController</i></a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/card/Card.html">Card</a></td>
 </tr>
 <tr>
@@ -308,6 +311,9 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/editor/EditView.html">EditView</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/game/EnableSpawnerEventAction.html">EnableSpawnerEventAction</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/game/EventAction.html">EventAction</a></td>
