--- a/pages/code/contrib/asdocs/all-index-E.html
+++ b/pages/code/contrib/asdocs/all-index-E.html
@@ -377,6 +377,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
  return to its basic animation state.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/EnableSpawnerEventAction.html">EnableSpawnerEventAction</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/package-detail.html">com.whirled.contrib.platformer.game</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/EnableSpawnerEventAction.html#EnableSpawnerEventAction()">EnableSpawnerEventAction</a>(gctrl:<a href="com/whirled/contrib/platformer/game/GameController.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game./class-list.html');">com.whirled.contrib.platformer.game:GameController</a>, xml) &mdash; Constructor in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/EnableSpawnerEventAction.html">EnableSpawnerEventAction</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/PlatformerController.html#endGame()">endGame</a>() &mdash; Method in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/PlatformerController.html">PlatformerController</a></td>
 </tr>
 <tr>
@@ -586,6 +598,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Jukebox.html#_eventMgr">_eventMgr</a> &mdash; Static property in class com.whirled.contrib.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Jukebox.html">Jukebox</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html#_eventMgr">_eventMgr</a> &mdash; Property in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html">PersistenceManager</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
