--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/BoardSprite.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/BoardSprite.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="BoardSprite,com.whirled.contrib.platformer.display.BoardSprite,ACTOR_LAYER,BACK_DYNAMIC_LAYER,BACK_PARTICLE_LAYER,BG_LAYER,BUFFER,FRONT_LEVEL_LAYER,FRONT_PARTICLE_LAYER,LBUFFER,LEVEL_LAYER,NUM_LAYERS,PARALLAX,SHOT_LAYER,SHOW_DETAILS,Y_ADJUST,_board,_centerX,_centerY,_lastDelta,_lastY,_layers,_lowBounds,_maxX,_minX,_showBG,centerX,centerY,addParticleEffect,addPieces,centerOn,ensureCentered,ensureVisible,handleDynamicAdded,handleDynamicRemoved,initBounds,initDisplay,moveDelta,shutdown,tick,updateActors,updateDisplay" name="keywords">
+<meta content="BoardSprite,com.whirled.contrib.platformer.display.BoardSprite,ACTOR_LAYER,BACK_DYNAMIC_LAYER,BACK_PARTICLE_LAYER,BG_LAYER,BUFFER,FRONT_LEVEL_LAYER,FRONT_PARTICLE_LAYER,LBUFFER,LEVEL_LAYER,NUM_LAYERS,PARALLAX,SHOT_LAYER,SHOW_DETAILS,Y_ADJUST,_board,_cameraCtrl,_centerX,_centerY,_lastDelta,_lastY,_layers,_lowBounds,_maxX,_minX,_showBG,centerX,centerY,addParticleEffect,addPieces,centerOn,ensureCentered,ensureVisible,handleDynamicAdded,handleDynamicRemoved,initBounds,initDisplay,moveDelta,setCameraController,shutdown,tick,updateActors,updateDisplay" name="keywords">
 <title>com.whirled.contrib.platformer.display.BoardSprite</title>
 </head>
 <body>
@@ -74,6 +74,11 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_board">_board</a> : <a href="../board/Board.html">Board</a>
 <div class="summaryTableDescription"> The board we're visualizing.</div>
+</td><td class="summaryTableOwnerCol">BoardSprite</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_cameraCtrl">_cameraCtrl</a> : <a href="../display/CameraController.html">CameraController</a>
+<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">BoardSprite</td>
 </tr>
 <tr class="">
@@ -160,6 +165,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#moveDelta()">moveDelta</a>(dX:Number, dY:Number):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">BoardSprite</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#setCameraController()">setCameraController</a>(cc:<a href="CameraController.html">CameraController</a>):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">BoardSprite</td>
 </tr>
@@ -326,6 +338,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>protected var _board:<a href="../board/Board.html">Board</a></code><p> The board we're visualizing. </p></div>
+<a name="_cameraCtrl"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_cameraCtrl</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _cameraCtrl:<a href="../display/CameraController.html">CameraController</a></code>
+</div>
 <a name="_centerX"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -635,6 +656,20 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">dY</span>:Number</code></td>
+</tr>
+</table>
+</div>
+<a name="setCameraController()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">setCameraController</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function setCameraController(cc:<a href="CameraController.html">CameraController</a>):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">cc</span>:<a href="CameraController.html">CameraController</a></code></td>
 </tr>
 </table>
 </div>
