--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/DynamicSprite.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/DynamicSprite.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="DynamicSprite,com.whirled.contrib.platformer.display.DynamicSprite,HIT_LENGTH,_disp,_dynamic,_hitFilter,_hitFilterIndex,_hitLeft,_particleCallback,_state,_static,changeState,findNode,findNodes,generateAttachedEffect,generateParticleEffect,getDynamic,handleAdded,handleRemoved,onAdded,onRemoved,playState,recolorNodes,recolorNodesToColor,setParticleCallback,setStatic,showAlways,showHit,shutdown,update" name="keywords">
+<meta content="DynamicSprite,com.whirled.contrib.platformer.display.DynamicSprite,HIT_LENGTH,_disp,_dynamic,_hitFilter,_hitFilterIndex,_hitLeft,_particleCallback,_state,_static,changeState,findNode,findNodes,forceBack,generateAttachedEffect,generateParticleEffect,getDynamic,handleAdded,handleRemoved,onAdded,onRemoved,playState,recolorNodes,recolorNodesToColor,setParticleCallback,setStatic,showAlways,showHit,shutdown,update" name="keywords">
 <title>com.whirled.contrib.platformer.display.DynamicSprite</title>
 </head>
 <body>
@@ -117,6 +117,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summarySignature">
 <a class="signatureLink" href="#findNodes()">findNodes</a>(nodes:Array, disp:DisplayObject):Array</div>
 <div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">DynamicSprite</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#forceBack()">forceBack</a>():Boolean</div>
+<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">DynamicSprite</td>
 </tr>
 <tr class="">
@@ -431,6 +438,22 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20"></td><td><code>Array</code></td>
+</tr>
+</table>
+</div>
+<a name="forceBack()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">forceBack</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function forceBack():Boolean</code>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Boolean</code></td>
 </tr>
 </table>
 </div>
