--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/class-list.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/class-list.html
@@ -13,6 +13,15 @@
 </h3>
 <table cellspacing="0" cellpadding="0">
 <tr>
+<td><a style="color:black" href="package-detail.html#interfaceSummary"><b>Interfaces</b></a></td>
+</tr>
+<tr>
+<td><a href="CameraController.html"><i>CameraController</i></a></td>
+</tr>
+<tr>
+<td width="10px">&nbsp;</td>
+</tr>
+<tr>
 <td><a style="color:black" href="package-detail.html#classSummary"><b>Classes</b></a></td>
 </tr>
 <tr>
