--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/DestructableGateController.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/DestructableGateController.html
@@ -129,7 +129,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#doesHit()">doesHit</a>(x:Number, y:Number):Boolean</div>
+<a class="signatureLink" href="#doesHit()">doesHit</a>(x:Number, y:Number, source:Object = null):Boolean</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">DestructableGateController</td>
 </tr>
@@ -303,7 +303,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function doesHit(x:Number, y:Number):Boolean</code><span class="label">Parameters</span>
+<code>public function doesHit(x:Number, y:Number, source:Object = null):Boolean</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">x</span>:Number</code></td>
@@ -313,6 +313,12 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">y</span>:Number</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">source</span>:Object</code> (default = <code>null</code>)<code></code></td>
 </tr>
 </table>
 <p></p>
