--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/CookieManager.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/CookieManager.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="CookieManager,com.whirled.contrib.platformer.persist.CookieManager,VERSION,WRITE_DELAY,_gameCtrl,_lastWrite,_loaded,_properties,_propertyDefaults,_timer,loaded,cookiePropertyUpdated,dispatchLoaded,getProperty,gotCookie,writeCookie" name="keywords">
+<meta content="CookieManager,com.whirled.contrib.platformer.persist.CookieManager,VERSION,WRITE_DELAY,_debug,_gameCtrl,_lastWrite,_loaded,_properties,_propertyDefaults,_timer,log,loaded,cookiePropertyUpdated,dispatchLoaded,getProperty,gotCookie,writeCookie" name="keywords">
 <title>com.whirled.contrib.platformer.persist.CookieManager</title>
 </head>
 <body>
@@ -67,6 +67,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_debug">_debug</a> : Boolean<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">CookieManager</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_gameCtrl">_gameCtrl</a> : GameControl<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">CookieManager</td>
 </tr>
@@ -102,7 +106,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#CookieManager()">CookieManager</a>(gameCtrl:GameControl, properties:HashMap)</div>
+<a class="signatureLink" href="#CookieManager()">CookieManager</a>(gameCtrl:GameControl, properties:HashMap, debugLogging:Boolean = false)</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">CookieManager</td>
 </tr>
@@ -161,6 +165,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Constant</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#log">log</a> : Log<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">CookieManager</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#VERSION">VERSION</a> : int = 1<div class="summaryTableDescription">[static] Version bumps are not required when adding new data types.</div>
 </td><td class="summaryTableOwnerCol">CookieManager</td>
 </tr>
@@ -178,10 +186,19 @@ showHideInherited();
 <div class="MainContent">
 <a name="propertyDetail"></a>
 <div class="detailSectionHeader">Property detail</div>
+<a name="_debug"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_debug</td><td class="detailHeaderType">property</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _debug:Boolean</code>
+</div>
 <a name="_gameCtrl"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">_gameCtrl</td><td class="detailHeaderType">property</td>
+<td class="detailHeaderName">_gameCtrl</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
@@ -253,7 +270,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function CookieManager(gameCtrl:GameControl, properties:HashMap)</code><span class="label">Parameters</span>
+<code>public function CookieManager(gameCtrl:GameControl, properties:HashMap, debugLogging:Boolean = false)</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">gameCtrl</span>:GameControl</code></td>
@@ -263,6 +280,12 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">properties</span>:HashMap</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">debugLogging</span>:Boolean</code> (default = <code>false</code>)<code></code></td>
 </tr>
 </table>
 </div>
@@ -348,10 +371,19 @@ showHideInherited();
 </div>
 <a name="constantDetail"></a>
 <div class="detailSectionHeader">Constant detail</div>
+<a name="log"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">log</td><td class="detailHeaderType">constant</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected static const log:Log</code>
+</div>
 <a name="VERSION"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">VERSION</td><td class="detailHeaderType">constant</td>
+<td class="detailHeaderName">VERSION</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
