--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/CookieProperty.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/CookieProperty.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="CookieProperty,com.whirled.contrib.platformer.persist.CookieProperty,_manager,_value,typeId,value,deserialize,serialize" name="keywords">
+<meta content="CookieProperty,com.whirled.contrib.platformer.persist.CookieProperty,_manager,_value,typeId,value,deserialize,serialize,toString" name="keywords">
 <title>com.whirled.contrib.platformer.persist.CookieProperty</title>
 </head>
 <body>
@@ -136,6 +136,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">CookieProperty</td>
 </tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#toString()">toString</a>():String</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">CookieProperty</td>
+</tr>
 </table>
 </div>
 <script type="text/javascript" language="javascript">
@@ -238,6 +245,22 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">bytes</span>:ByteArray</code></td>
+</tr>
+</table>
+</div>
+<a name="toString()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">toString</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function toString():String</code>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>String</code></td>
 </tr>
 </table>
 </div>
