--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Spawner.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Spawner.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="Spawner,com.whirled.contrib.platformer.piece.Spawner,U_HEALTH,U_SPAWN,_health,_spawnCount,_spawning,_wasHit,deathEffect,deathInterval,destructable,maxConcurrent,offX,spawnDelay,spawnInterval,spawnXML,spawns,totalSpawns,enemyCount,health,spawnCount,spawning,wasHit,fromBytes,isAlive,ownerType,shouldSpawn,toBytes,xmlInstance" name="keywords">
+<meta content="Spawner,com.whirled.contrib.platformer.piece.Spawner,U_HEALTH,U_SPAWN,_health,_spawnCount,_spawning,_wasHit,deathEffect,deathInterval,destructable,disabled,maxConcurrent,offX,spawnDelay,spawnInterval,spawnXML,spawns,totalSpawns,enemyCount,health,spawnCount,spawning,wasHit,fromBytes,isAlive,ownerType,shouldSpawn,toBytes,xmlInstance" name="keywords">
 <title>com.whirled.contrib.platformer.piece.Spawner</title>
 </head>
 <body>
@@ -71,6 +71,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#destructable">destructable</a> : Boolean<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Spawner</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#disabled">disabled</a> : Boolean<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Spawner</td>
 </tr>
 <tr class="hideInheritedProperty">
@@ -428,6 +432,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public var destructable:Boolean</code>
+</div>
+<a name="disabled"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">disabled</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public var disabled:Boolean</code>
 </div>
 <a name="enemyCount"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
